--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_NO_WARNINGS=1 node server.js",
     "dev": "nodemon server.js",
     "test": "jest"
   },
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vant/weapp": "^1.11.6",
+    "@vant/weapp": "^1.11.7",
     "config": "^3.3.12",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.2",
-    "uuid": "^10.0.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.1",
+    "openai": "^4.85.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "eslint": "^9.9.0",
-    "prettier": "^3.3.3"
+    "eslint": "^9.21.0",
+    "prettier": "^3.5.2"
   }
 }
