--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/index/index",
     "pages/partOne/partOne",
     "pages/partTwo/partTwo",
     "pages/partThree/partThree",
