done:缓存重要字段防篡改；轮询查询被邀请人数更新对应ui字段； todo: 首页：其他 复习时卡片翻页的效果（卡片题面附加答题技巧） part one无效css删除 part two part three

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vant/weapp": "^1.11.7",
     "axios": "^1.8.1",
     "config": "^3.3.12",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
