done:首页：其他和feedback页面 todo: 复习时卡片翻页的效果（卡片题面附加答题技巧） part one无效css删除 part two part three

--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -4,6 +4,7 @@
     "pages/partOne/partOne",
     "pages/partTwo/partTwo",
     "pages/partThree/partThree",
+    "pages/feedback/feedback",
     "pages/aboutMe/aboutMe",
     "pages/logs/logs"
   ],
