用户分享给好友，分享到朋友圈doing

--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -35,5 +35,6 @@
     "navigationBarTitleText": "HighScoreIELTS",
     "navigationBarBackgroundColor": "#ffffff"
   },
-  "componentFramework": "glass-easel"
+  "componentFramework": "glass-easel",
+  "enableShareTimeline": true
 }
