用户分享给好友，分享到朋友圈doing

--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -36,5 +36,8 @@
     "navigationBarBackgroundColor": "#ffffff"
   },
   "componentFramework": "glass-easel",
-  "enableShareTimeline": true
+  "enableShareTimeline": true,
+  "enableShareToGroup": true,
+  "enableAddToFavorites": true,
+  "enableShareStatus": true
 }
