--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-node_modules
+# 环境变量
 .env
+.env.local
+.env.*.local
+
+# 日志
+logs
+*.log
+
+# 依赖
+node_modules/
+
+# 编辑器配置
+.vscode/
+.idea/
+
 miniprogram/node_modules
 vue-admin/node_modules
 README.md 
