--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
   "dependencies": {
     "@types/crypto-js": "^4.2.2",
     "@vant/weapp": "^1.11.7",
-    "axios": "^1.8.1",
+    "axios": "^1.6.0",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.85.4",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "eslint": "^9.21.0",
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.2",
+    "nodemon": "^3.0.2"
   }
 }
