基础口语页面 done

--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/basicPractice/basicPractice",
+    "pages/detailBasic/detailBasic",
     "pages/advancedPractice/advancedPractice",
     "pages/expertPractice/expertPractice",
     "pages/aiSimulation/aiSimulation",
