--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -2,6 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/basicPractice/basicPractice",
+    "pages/test1/test1",
+    "pages/listExpert/listExpert",
     "pages/detailBasic/detailBasic",
     "pages/advancedPractice/advancedPractice",
     "pages/expertPractice/expertPractice",
