--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -33,12 +33,8 @@
   },
   "window": {
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "HighScoreIELTS",
+    "navigationBarTitleText": "",
     "navigationBarBackgroundColor": "#ffffff"
   },
-  "componentFramework": "glass-easel",
-  "enableShareTimeline": true,
-  "enableShareToGroup": true,
-  "enableAddToFavorites": true,
-  "enableShareStatus": true
+  "componentFramework": "glass-easel"
 }
