done: 1 把代码中的无用代码清理掉; 2 增加pm, 日志等线上部署需要的package; 3 按development/debug/test/production 切换对应的host port mongo_uri

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ node_modules/
 .idea/
 
 miniprogram/node_modules
-vue-admin/node_modules
+vue-admin/
 README.md 
 miniprogram/README.md
 vue-admin/README.md
