--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "highscoreielts",
+  "name": "littlehamsterspeaking",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "NODE_NO_WARNINGS=1 node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "dev": "cross-env NODE_NO_WARNINGS=1 NODE_ENV=development nodemon server.js",
+    "debug": "cross-env NODE_ENV=debug node server.js",
+    "test": "cross-env NODE_ENV=test node server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,14 +21,17 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "openai": "^4.85.4",
     "uuid": "^11.1.0",
-    "node-cron": "^3.0.3"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^9.21.0",
-    "prettier": "^3.5.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.5.2"
   }
 }
