--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "openai": "^4.85.4",
+    "qiniu": "^7.14.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
