--- a/miniprogram/miniprogram/app.json
+++ b/miniprogram/miniprogram/app.json
@@ -7,29 +7,15 @@
     "pages/detailAdvanced/detailAdvanced",
     "pages/listExpert/listExpert",
     "pages/detailExpert/detailExpert",
-    "pages/aboutMe/aboutMe",
-    "pages/feedback/feedback"
+    "pages/aboutMe/aboutMe"
   ],
   "usingComponents": {
     "tab-bar": "/components/tabBar/tabBar",
     "van-button": "@vant/weapp/button/index",
     "van-popup": "@vant/weapp/popup/index",
-    "van-cell": "@vant/weapp/cell/index",
-    "van-cell-group": "@vant/weapp/cell-group/index",
-    "van-collapse": "@vant/weapp/collapse/index",
-    "van-collapse-item": "@vant/weapp/collapse-item/index",
-    "van-divider": "@vant/weapp/divider/index",
     "van-icon": "@vant/weapp/icon/index",
-    "van-sticky": "@vant/weapp/sticky/index",
     "van-radio": "@vant/weapp/radio/index",
-    "van-radio-group": "@vant/weapp/radio-group/index",
-    "van-field": "@vant/weapp/field/index",
-    "van-row": "@vant/weapp/row/index",
-    "van-col": "@vant/weapp/col/index",
-    "van-tabbar": "@vant/weapp/tabbar/index",
-    "van-tabbar-item": "@vant/weapp/tabbar-item/index",
-    "van-switch": "@vant/weapp/switch/index",
-    "van-toast": "@vant/weapp/toast/index"
+    "van-radio-group": "@vant/weapp/radio-group/index"
   },
   "window": {
     "navigationBarTextStyle": "black",
