微信小程序升级有支付能力，支付订单测试完成。

--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -20,7 +20,7 @@
     },
     "coverView": false,
     "postcss": false,
-    "minified": false,
+    "minified": true,
     "enhance": true,
     "showShadowRootInWxmlPanel": false,
     "ignoreUploadUnusedFiles": true,
@@ -41,5 +41,5 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wx64644819be1ec93a"
+  "appid": "wxe85e9bffc952139c"
 }
