--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.0",
     "config": "^3.3.12",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
@@ -40,7 +41,8 @@
     "openai": "^4.85.4",
     "qiniu": "^7.14.0",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
