--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,15 @@
 # 日志
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # 依赖
 node_modules/
+admin/node_modules
 
 # 编辑器配置
 .vscode/
@@ -22,3 +28,7 @@ README.md
 miniprogram/README.md
 vue-admin/README.md
 money.md
+
+# Build files
+/build
+/admin/build
